--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <h1>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome!</h1>
 
-<p>On the way! </p>
+<p>Amazing how only after a month of 42 I'm confident enough to figure out how to host a web page with a custom domain and get it up in under and hour.
+
+</p>
 
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
@@ -66,7 +68,7 @@
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
