--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
 
 <p>Amazing how only after a month of 42 I'm confident enough to figure out how to host a web page with a custom domain and get it up in under and hour.</p>
 
+<h3>Here's how I did it:<h3>
+		<ul>
+			<li>bought a domain name (I used godaddy)</li>
+			<li>Setup github page on my github using this guide:</li>
+			<ul>
+				<li>http://andrewsturges.com/blog/jekyll/tutorial/2014/!/06/github-and-godaddy.htm</li>
+			</ul>
+			<li>set up the DNS records at godaddy using this guide:</li>
+			<ul>
+				<li>http://andrewsturges.com/blog/jekyll/tutorial/2014/!/06/github-and-godaddy.html</li>
+			</ul>
+			<li>Git cloned and then started playing with the index.html - that's how i added in this text!</li>
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -53,6 +65,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
